# rerun_urdf_logger

./: README.md  pyproject.toml
src/example/: example.py
src/rerun_urdf_logger/: rerun_urdf_logger.py
